--- a/package.json
+++ b/package.json
@@ -3,10 +3,24 @@
   "version": "0.0.1",
   "description": "My personal webpack-express-boilerplate",
   "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {},
+  "dependencies": {
+    "express": "^4.14.0",
+    "morgan": "^1.7.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "2.x",
+    "file-loader": "^0.9.0",
+    "style-loader": "^0.13.1",
+    "webpack": "2.x",
+    "webpack-dev-server": "2.x"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./server"
   },
   "repository": {
     "type": "git",
