--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.14.0",
+    "lodash": "^4.17.4",
     "morgan": "^1.7.0"
   },
   "devDependencies": {
