--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "My personal webpack-express-boilerplate",
   "main": "index.js",
   "dependencies": {
+    "babel-runtime": "^6.22.0",
     "express": "^4.14.0",
     "lodash": "^4.17.4",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "vue": "^2.1.10"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
@@ -15,16 +17,19 @@
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "2.x",
     "file-loader": "^0.9.0",
+    "postcss-loader": "^1.2.2",
     "style-loader": "^0.13.1",
-    "webpack": "2.x",
-    "webpack-dev-server": "2.x"
+    "vue-loader": "^10.1.1",
+    "vue-template-compiler": "^2.1.0",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf dist/*",
     "build": "npm run clean && webpack",
     "start": "webpack-dev-server",
-    "start:exp" : "node ./server"
+    "start:exp": "node ./server"
   },
   "repository": {
     "type": "git",
