--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
+    "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
+    "eslint": "^3.14.1",
+    "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-plugin-html": "^2.0.0",
+    "eslint-plugin-import": "^2.2.0",
     "extract-text-webpack-plugin": "2.x",
     "file-loader": "^0.9.0",
     "postcss-loader": "^1.2.2",
