--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf dist/*",
-    "build": "npm run clean && webpack",
-    "start": "webpack-dev-server",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js",
     "start:exp": "node ./server"
   },
   "repository": {
