--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "babel-runtime": "^6.22.0",
+    "bootstrap": "3",
     "express": "^4.14.0",
     "lodash": "^4.17.4",
     "morgan": "^1.7.0",
@@ -26,6 +27,7 @@
     "file-loader": "^0.9.0",
     "postcss-loader": "^1.2.2",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "vue-loader": "^10.1.1",
     "vue-template-compiler": "^2.1.0",
     "webpack": "^2.2.0",
