--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-import": "^2.2.0",
     "extract-text-webpack-plugin": "2.x",
     "file-loader": "^0.9.0",
+    "nconf": "^0.8.4",
     "postcss-loader": "^1.2.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
