--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,11 @@
     "es6": true
   },
   "parserOptions": {
-    "sourceType": "module"
+    "ecmaVersion": 2017,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
   },
   "rules": {
     "indent": [
