--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^6.2.10",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-latest": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
