--- a/.editorconfig
+++ b/.editorconfig
@@ -8,10 +8,14 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-# Matches multiple files with brace expansion notation
+# Matches files with brace expansion notation
 # Set default charset
 [*.{js,py}]
 charset = utf-8
+
+[*.js]
+indent_style = space
+indent_size = 2
 
 # 4 space indentation
 [*.py]
